Fix Material layout z-index

--- a/Source/Blazorise.Material/wwwroot/blazorise.material.css
+++ b/Source/Blazorise.Material/wwwroot/blazorise.material.css
@@ -347,13 +347,13 @@ input.form-control[type=color] {
     color: #fff; }
 
 .b-layout-header-fixed {
-    z-index: 1020; }
+    z-index: 160; }
 
 .b-layout-footer-fixed {
-    z-index: 1020; }
+    z-index: 160; }
 
 .b-layout-sider-content {
-    z-index: 1021; }
+    z-index: 161; }
 
 .modal.show {
     animation-duration: 0.25s;
